# Z-Filter

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: README.md
.claude/commands/: create-plan.md  implement-plan.md  research-codebase.md
Releases/Z-Filter.vst3/Contents/x86_64-win/: Z-Filter.vst3
Releases/Z-Filter.vst3/Z-Filter.vst3/Contents/x86_64-win/: Z-Filter.vst3
Releases/Z-FilterMini.vst3/Contents/x86_64-win/: Z-FilterMini.vst3
Releases/Z-FilterMini.vst3/Z-FilterMini.vst3/Contents/Resources/: moduleinfo.json
Releases/Z-FilterMini.vst3/Z-FilterMini.vst3/Contents/x86_64-win/: Z-FilterMini.vst3
Releases/Z-FilterXL.vst3/Contents/x86_64-win/: Z-FilterXL.vst3
Releases/Z-FilterXL.vst3/Z-FilterXL.vst3/Contents/Resources/: moduleinfo.json
Releases/Z-FilterXL.vst3/Z-FilterXL.vst3/Contents/x86_64-win/: Z-FilterXL.vst3
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AirwindowsReference/: ZFilter-PluginProcessor.cpp  ZFilterMini-PluginProcessor.cpp  ZFilterXL-PluginProcessor.cpp
